fix: uncomment align-items stretch

--- a/src/views/tutorial-view/components/featured-in-collections/featured-in-collections.module.css
+++ b/src/views/tutorial-view/components/featured-in-collections/featured-in-collections.module.css
@@ -9,7 +9,7 @@
 }
 
 .listRoot {
-  /* align-items: stretch; */
+  align-items: stretch;
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
